# rise

./: .gitignore  Cargo.toml  build.rs
ast/shader/: standard.vert
examples/: cube.rs  triangle.rs
res/mat/: standard.mat
res/model/: sphere.mtl
res/shader/: parallax.vert  pbr.frag  pbr.vert  standard.frag  standard.mat  standard.vert  standard.vert.spv
src/: game.rs  main.rs  renderer.rs
src/graphics/: material.rs  mesh.rs  mod.rs  renderer.rs
src/rise/: lib.rs
src/rise/core/: application.rs  camera.rs  input.rs  keyboard.rs  mod.rs  transform.rs
src/rise/graphics/: material.rs  mesh.rs  mod.rs  render.rs  texture.rs
src/rise/graphics/material/: material.rs  material_instance.rs  mod.rs  uniform.rs
src/sandbox/: sandbox.rs
